--- a/src/app/common/menu-bar/menu-bar.component.html
+++ b/src/app/common/menu-bar/menu-bar.component.html
@@ -1,9 +1,9 @@
 <mat-toolbar>
     <span>ABC Org</span>
     <ul>
-        <li>Home</li>
-        <li>About Us</li>
-        <li>Services</li>
-        <li>Contact Us</li>
+        <li (click)="changeRoute('')">Home</li>
+        <li (click)="changeRoute('/about')">About Us</li>
+        <li (click)="changeRoute('/services')">Services</li>
+        <li (click)="changeRoute('/contact')">Contact Us</li>
     </ul>
   </mat-toolbar>
