--- a/src/app/common/menu-bar/menu-bar.component.html
+++ b/src/app/common/menu-bar/menu-bar.component.html
@@ -4,6 +4,7 @@
         <li (click)="changeRoute('')">Home</li>
         <li (click)="changeRoute('/about')">About Us</li>
         <li (click)="changeRoute('/services')">Services</li>
+        <!--<a routerLink="/services">Services</a>-->
         <li (click)="changeRoute('/contact')">Contact Us</li>
     </ul>
   </mat-toolbar>
