--- a/src/app/pages/services/service-card/service-card.component.html
+++ b/src/app/pages/services/service-card/service-card.component.html
@@ -1,9 +1,9 @@
 <mat-card class="service-card">
     <mat-card-header>
-         <mat-card-title>{{ service.servicename }}</mat-card-title>
+         <mat-card-title>{{ service.servicename | uppercase }}</mat-card-title>
           <mat-card-subtitle>{{ service.category }}</mat-card-subtitle> 
         </mat-card-header> <mat-card-content>
              <p>{{ service.description }}</p> 
-             <p>Hourly Price: {{ service.hourlyprice }}</p> 
+             <p>Hourly Price: {{ service.hourlyprice | currency: "USD"}}</p> 
             </mat-card-content>
      </mat-card>
