--- a/src/app/pages/services/service-card/service-card.component.html
+++ b/src/app/pages/services/service-card/service-card.component.html
@@ -1,6 +1,6 @@
 <mat-card class="service-card">
     <mat-card-header>
-         <mat-card-title>{{ service.servicename | uppercase }}</mat-card-title>
+         <mat-card-title>{{ service.servicename | uppercase | catformat:cat:service.category}}</mat-card-title>
           <mat-card-subtitle>{{ service.category }}</mat-card-subtitle> 
         </mat-card-header> <mat-card-content>
              <p>{{ service.description }}</p> 
