--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,15 @@
 <div class="adwords">
      {{message | async}}
 </div>
+
+<div class="alert alert-dark">
+    <h3>Our Services</h3>
+    <p>
+      
+          ABC Limited is a global multi-disciplinary, brand, communications and digital agency. As a full-service agency, our work covers everything from market analysis to brand and identity, advertising and communications, digital, web design and content creation to social media and film. And we offer services across many different geographies and languages.
+    </p>
+</div>
+
+<div id="services">
+<app-service-item *ngFor="let x of offerings" [service]="x"></app-service-item>
+</div>
