--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -13,3 +13,5 @@
 <div id="services">
 <app-service-item *ngFor="let x of offerings" [service]="x"></app-service-item>
 </div>
+
+<app-form></app-form>
