--- a/src/app/common/menu-bar/menu-bar.component.html
+++ b/src/app/common/menu-bar/menu-bar.component.html
@@ -6,5 +6,6 @@
         <li (click)="changeRoute('/services')">Services</li>
         <!--<a routerLink="/services">Services</a>-->
         <li (click)="changeRoute('/contact')">Contact Us</li>
+        <li (click)="changeRoute('/projects')">Projects</li>
     </ul>
   </mat-toolbar>
