--- a/src/app/common/menu-bar/menu-bar.component.html
+++ b/src/app/common/menu-bar/menu-bar.component.html
@@ -8,4 +8,5 @@
         <li (click)="changeRoute('/contact')">Contact Us</li>
         <li (click)="changeRoute('/projects')">Projects</li>
     </ul>
+    <div class="login" (click)="log()">{{logmessage}}</div>
   </mat-toolbar>
